Ad code center alignment fixed for single ad display

--- a/public/css/wpadcenter-public.css
+++ b/public/css/wpadcenter-public.css
@@ -47,6 +47,11 @@
   justify-content: flex-start;
 }
 
+.wpadcenter-aligncenter .wpadcenter-ad-code {
+  display: flex;
+  justify-content: center;
+}
+
 #wpadcenter_ad {
   display: block;
 }
